examples/test/testpolicy9083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9083
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key17: value32
      key12: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value26
          key3: value43
      podSelector:
        matchLabels:
          key18: value36
          key9: value18
          key28: value26
